kubernetes/03-haproxy-deployment.yaml
# HAProxy deployment.
# It reads configuration from ConfigMap and forwards traffic to Tomcat service.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
  namespace: app-stack
  labels:
    app: haproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy
  template:
    metadata:
      labels:
        app: haproxy
    spec:
      containers:
        - name: haproxy
          image: haproxy:2.9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: haproxy-config-volume
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
      volumes:
        - name: haproxy-config-volume
          configMap:
            name: haproxy-config
